--- a/ProtoRabbit/MainPage.xaml
+++ b/ProtoRabbit/MainPage.xaml
@@ -5,6 +5,7 @@
              xmlns:viewmodel="clr-namespace:ProtoRabbit.ViewModels"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:system="clr-namespace:System;assembly=System.Runtime"
+             xmlns:services="clr-namespace:ProtoRabbit.Services"
              x:DataType="viewmodel:MainPageViewModel"
              x:Class="ProtoRabbit.MainPage"
              Title="">
@@ -194,6 +195,28 @@
                 IsVisible="{Binding Connected}">
                 <BoxView HeightRequest="2" HorizontalOptions="Fill" Color="Gray" />
                 <Label Text="Receive" HorizontalOptions="Start" Style="{StaticResource SectionLabelStyle}" />
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="300"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <CollectionView SelectionMode="Single" ItemsSource="{Binding Subscriptions}">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate x:DataType="services:Subscription">
+                                <Label Text="{Binding SubscriptionName}"></Label>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                        <CollectionView.EmptyViewTemplate>
+                            <DataTemplate>
+                                <Label Text="No subscriptions"></Label>
+                            </DataTemplate>
+                        </CollectionView.EmptyViewTemplate>
+                    </CollectionView>
+
+                </Grid>
+
             </VerticalStackLayout>
 
 
